--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize"
     app:itemIconTint="@null"
+    android:background="@color/grey"
     app:itemTextColor="@null" >
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -23,6 +24,7 @@
 
 
     <fragment
+
         android:id="@+id/nav_host_fragment_activity_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
