--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,22 +1,123 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment">
+    android:layout_height="260dp"
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/text_dashboard"
+    <!-- Vertical Guideline at 60% (for left-right split) -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6"/>
+
+    <!-- My Expenses block (left) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/myExpensesBlock"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/grey_dark"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@id/guidelineVertical">
+
+        <TextView
+            android:id="@+id/myExpensesLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="my expenses"
+            android:textSize="14sp"
+            android:textColor="#FFFFFF"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/myExpensesAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-1230,26"
+            android:textSize="28sp"
+            android:textColor="#FFFFFF"
+            android:layout_margin="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Receivable block (top-right) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/receivableBlock"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="4dp"
+        android:background="@color/yellow"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/debtBlock"
+        app:layout_constraintHeight_percent="0.5">
+
+        <TextView
+            android:id="@+id/receivableLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="receivable"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"/>
+
+        <TextView
+            android:id="@+id/receivableAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="230,26"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="8dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Debt block (bottom-right) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/debtBlock"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/orange"
+        app:layout_constraintTop_toBottomOf="@id/receivableBlock"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/debtLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="debt"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"/>
+
+        <TextView
+            android:id="@+id/debtAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="230,26"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="8dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
