--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="260dp"
+    android:fitsSystemWindows="false"
     android:padding="16dp">
 
     <!-- Vertical Guideline at 60% (for left-right split) -->
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:text="my expenses"
             android:textSize="14sp"
+            android:fontFamily="@font/manrope_bold"
             android:textColor="#FFFFFF"
             android:layout_margin="8dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,6 +43,7 @@
             android:layout_height="wrap_content"
             android:text="-1230,26"
             android:textSize="28sp"
+            android:fontFamily="@font/manrope_bold"
             android:textColor="#FFFFFF"
             android:layout_margin="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,6 +55,7 @@
         android:id="@+id/receivableBlock"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fontFamily="@font/manrope_bold"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="4dp"
         android:background="@color/yellow"
@@ -66,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="receivable"
+            android:fontFamily="@font/manrope_bold"
             android:textSize="14sp"
             android:textColor="#000000"
             app:layout_constraintTop_toTopOf="parent"
@@ -76,6 +81,7 @@
             android:id="@+id/receivableAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/manrope_bold"
             android:text="230,26"
             android:textSize="20sp"
             android:textColor="#000000"
@@ -89,6 +95,7 @@
         android:id="@+id/debtBlock"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fontFamily="@font/manrope_bold"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:background="@color/orange"
@@ -102,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="debt"
+            android:fontFamily="@font/manrope_bold"
             android:textSize="14sp"
             android:textColor="#000000"
             app:layout_constraintTop_toTopOf="parent"
@@ -112,6 +120,7 @@
             android:id="@+id/debtAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/manrope_bold"
             android:text="230,26"
             android:textSize="20sp"
             android:textColor="#000000"
