--- a/app/src/main/res/drawable/debt_bg.xml
+++ b/app/src/main/res/drawable/debt_bg.xml
@@ -2,12 +2,9 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
 
-        <solid android:color="@color/orange" /> <!-- Background color -->
+        <solid android:color="@color/orange" />
 
-        <corners android:radius="6dp" /> <!-- Rounded corners -->
+        <corners android:radius="6dp" />
 
-        <!-- Optional: Add padding or stroke -->
-        <!-- <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" /> -->
-        <!-- <stroke android:width="2dp" android:color="#FF3700B3" /> -->
 
     </shape>
