--- a/app/src/main/res/drawable/receivable_bg.xml
+++ b/app/src/main/res/drawable/receivable_bg.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-        <solid android:color="@color/yellow" /> <!-- Background color -->
+    <solid android:color="@color/yellow" />
 
-        <corners android:radius="6dp" /> <!-- Rounded corners -->
+    <corners android:radius="6dp" />
 
-        <!-- Optional: Add padding or stroke -->
-        <!-- <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" /> -->
-        <!-- <stroke android:width="2dp" android:color="#FF3700B3" /> -->
-
-    </shape>
+</shape>
