--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,17 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-    android:padding="16dp">
+    android:fitsSystemWindows="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/summary"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="260dp"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="260dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
         <!-- Vertical Guideline at 60% (for left-right split) -->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineVertical"
@@ -145,46 +145,46 @@
         android:id="@+id/latest_expenses"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/summary"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/summary">
 
         <!-- Header Row -->
         <LinearLayout
             android:id="@+id/headerRow"
             android:layout_width="0dp"
+            android:paddingHorizontal="18dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:weightSum="1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:weightSum="1">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/latestExpensesTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Latest Expenses"
-                android:textSize="18sp"
                 android:fontFamily="@font/manrope_bold"
-                android:textColor="@color/orange" />
+                android:text="Latest Expenses"
+                android:textColor="@color/orange"
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/seeAllButton"
-                android:background="@drawable/primary_button_bg"
                 android:layout_width="wrap_content"
-                android:fontFamily="@font/manrope_bold"
                 android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:paddingVertical="0dp"
+                android:background="@drawable/primary_button_bg"
+                android:fontFamily="@font/manrope_bold"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
-                android:text="Show All" />
+                android:paddingVertical="0dp"
+                android:text="Show All"
+                android:textAllCaps="false" />
         </LinearLayout>
 
         <!-- RecyclerView filling the rest -->
