feat: add expense margin

--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/expense_bg"
+    android:layout_margin="8dp"
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp">
 
