feat: change password flow

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -100,6 +100,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordInput"
         android:layout_width="0dp"
+        app:endIconMode="password_toggle"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:hint="Repeat Password"
@@ -130,6 +131,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/repeatPasswordInput"
         android:layout_width="0dp"
+        app:endIconMode="password_toggle"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:hint="Password"
