feat: populate recyclerviews with dummy data

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationView"
+
+        android:elevation="8dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/grey_dark"
