--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -5,9 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333">
+    android:background="@color/grey">
 
-    <!-- Title -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
@@ -21,7 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Year Picker -->
     <LinearLayout
         android:id="@+id/yearPicker"
         android:layout_width="wrap_content"
