--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/expense_bg"
-    android:layout_margin="8dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp">
 
@@ -33,28 +34,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iconContainer"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/dailyExpensesDate"
+            android:id="@+id/dailyExpensesName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_bold"
-            android:text="Dog food"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
 
         <TextView android:layout_marginTop="6dp"
+            android:id="@+id/dailyExpensesDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_bold"
-            android:text="Budget1"
             android:textColor="@color/white"
-            android:textSize="10sp" />
+            android:textSize="11sp" />
 
     </LinearLayout>
 
@@ -63,7 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/manrope_bold"
-        android:text="-300 PLN"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
