--- a/app/src/main/res/layout/item_recyclerview_header.xml
+++ b/app/src/main/res/layout/item_recyclerview_header.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#6C6A6A"
     android:paddingVertical="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingHorizontal="16dp"
     android:id="@+id/dailyExpensesHeader"
     >
