--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
-    tools:context=".ChangePassword">
+    tools:context=".ui.activities.ChangePassword">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
