feat: wallet view

--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dailyExpensesHeader"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,8 +19,7 @@
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ExtraText">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iconImage"
@@ -30,14 +28,17 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_home_white_24dp" />
     </FrameLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/nameDateBlock"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iconContainer"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@id/dailyExpensesSummary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/dailyExpensesName"
@@ -45,17 +46,18 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_bold"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLines="1"
+            android:ellipsize="end" />
 
-
-        <TextView android:layout_marginTop="6dp"
+        <TextView
             android:id="@+id/dailyExpensesDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:fontFamily="@font/manrope_bold"
             android:textColor="@color/white"
             android:textSize="11sp" />
-
     </LinearLayout>
 
     <TextView
@@ -65,7 +67,11 @@
         android:fontFamily="@font/manrope_bold"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:minWidth="48dp"
+        android:maxWidth="96dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
