feat: remove currencies from main wallet

--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -141,7 +141,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Currency -->
-        <TextView
+        <!--TextView
             android:id="@+id/currencyLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
             android:popupBackground="@color/grey_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/currencyLabel" />
+            app:layout_constraintTop_toBottomOf="@id/currencyLabel" /-->
 
         <!-- Date -->
         <TextView
@@ -176,7 +176,7 @@
             android:textColor="@color/grey_light"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/currencySpinner" />
+            app:layout_constraintTop_toBottomOf="@id/amountInputLayout" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dateInputLayout"
@@ -212,7 +212,6 @@
             android:id="@+id/saveTransactionBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/manrope_extrabold"
             android:paddingVertical="12dp"
