--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="orange">#FF9C3F</color>
     <color name="green_success">#A9F863</color>
     <color name="yellow">#FFCC00</color>
-    <color name="red_error">#FFCC00</color>
+    <color name="red_error">#FF0000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
